Change Repositories checkmark to plain text

The checkmark symbol is not available in the Noto font, replacing it
with plain text language until font fallback for symbols can be
implemented.  Fixes #13368